[project]
name = "pdform"
version = "0.2.5"
description = "A library and command-line tool for working with PDF interactive forms. Uses pikepdf and pdf2htmlex."
authors = [
    {name = "Dominick Johnson",email = "dominick.johnson@tylertech.com"}
]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "pikepdf (>=9.8.0,<10.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pdform", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdform = 'pdform.cli:cli'

[project.urls]
Homepage = "https://github.com/dmjohnsson23/pdform-pikpdf"
